--- a/css/style.css
+++ b/css/style.css
@@ -179,3 +179,25 @@ img {
 .cloud .grid {
     grid-template-columns: 4fr 3fr;
 }
+
+/* Languages */
+.languages .flex {
+    flex-wrap: wrap;
+}
+
+.languages .card {
+    text-align: center;
+    margin: 18px 10px 40px;
+    /* Faz a transição do translate do card, para ficar mais suave */
+    transition: transform 0.2s ease-in;
+}
+
+.languages .card h4 {
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+
+.languages .card:hover {
+    /* Deixa os cards para cima */
+    transform: translateY(-10px);
+}
