--- a/css/utilities.css
+++ b/css/utilities.css
@@ -88,6 +88,18 @@
     color: #fff;
 }
 
+.bg-primary a,
+.btn-primary a,
+.bg-secondary a,
+.btn-secondary a,
+.bg-dark a,
+.btn-dark a,
+.bg-light a,
+.btn-light a {
+    color: #fff;
+}
+
+
 /* Text sizes */
 .lead {
     font-size: 20px;
