--- a/css/style.css
+++ b/css/style.css
@@ -206,3 +206,62 @@ img {
 .footer .social a {
     margin: 0 10px;
 }
+
+/* Tablets and under */
+@media(max-width: 768px) {
+    .grid, 
+    .showcase .grid,
+    .stats .grid,
+    .cli .grid,
+    .cloud .grid {
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr;
+    }
+
+    .showcase {
+        height: auto;
+    }
+
+    .showcase-text {
+        text-align: center;
+        margin-top: 40px;
+    }
+
+    .showcase-form {
+        /* Centraliza um item grid ou flex */
+        justify-self: center;
+        /* Centraliza normal */
+        margin: auto;
+    }
+
+    /* Pega apenas o primeiro filho */
+    .cli .grid > *:first-child {
+        grid-column: 1;
+        grid-row: 1;
+    }
+
+    .cli .grid .card {
+        text-align: center;
+    }
+
+    .cloud .grid img {
+        max-width: 400px;
+        margin: auto;
+    }
+}
+
+/* Mobile */
+@media(max-width: 500px) {
+    .navbar {
+        height: 110px;
+    }
+
+    .navbar .flex {
+        flex-direction: column;
+    }
+
+    .navbar ul {
+        padding: 10px;
+        background-color: rgba(0,0,0,0.1);
+    }
+}
