--- a/css/style.css
+++ b/css/style.css
@@ -202,6 +202,35 @@ img {
     transform: translateY(-10px);
 }
 
+/* Features */
+.features-head img {
+    width: 200px;
+    /** Joga a imagem para o final do seu bloco (flex) */
+    justify-self: flex-end;
+}
+
+.features-sub-head img {
+    width: 300px;
+    justify-self: flex-end;
+}
+
+/* Main */
+.features-main .card > i {
+    margin-right: 20px;
+}
+
+.features-main .grid {
+    padding: 30px;
+}
+
+.features-main .grid > *:first-child {
+    grid-column: 1 / span 3;
+}
+
+.features-main .grid > *:nth-child(2) {
+    grid-column: 1 / span 2;
+}
+
 /* Footer */
 .footer .social a {
     margin: 0 10px;
