Docs page added

--- a/css/utilities.css
+++ b/css/utilities.css
@@ -63,6 +63,28 @@
     text-align: center;
 }
 
+/* Alert */
+.alert {
+    background-color: var(--light-color);
+    padding: 10px 20px;
+    font-weight: bold;
+    margin: 15px 0;
+}
+
+.alert i {
+    margin-right: 10px;
+}
+
+.alert-success {
+    background-color: var(--success-color);
+    color: #fff;
+}
+
+.alert-error {
+    background-color: var(--error-color);
+    color: #fff;
+}
+
 /* Backgrounds and color buttons */
 .bg-primary,
 .btn-primary {
@@ -85,6 +107,7 @@
 .bg-light,
 .btn-light {
     background-color: var(--light-color);
+    color: #333;
 }
 
 .bg-primary a,
@@ -92,10 +115,24 @@
 .bg-secondary a,
 .btn-secondary a,
 .bg-dark a,
-.btn-dark a,
-.bg-light a,
-.btn-light a {
+.btn-dark a {
     color: #fff;
+}
+
+.text-primary {
+    color: var(--primary-color);
+}
+
+.text-secondary {
+    color: var(--secondary-color);
+}
+
+.text-dark {
+    color: var(--dark-color);
+}
+
+.text-light {
+    color: var(--light-color);
 }
 
 
