--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,8 @@
     --secondary-color: #1c3fa8;
     --dark-color: #002240;
     --light-color: #f4f4f4;
+    --success-color: #5cb85c;
+    --error-color: #d9534f;
 }
 
 /** Reset */
@@ -45,6 +47,13 @@ p {
 img {
     /** Responsive img - Sticks to the container */
     width: 100%;
+}
+
+code, 
+pre {
+    background-color: #333;
+    color: #fff;
+    padding: 10px;
 }
 
 /* Navbar */
@@ -229,6 +238,32 @@ img {
 
 .features-main .grid > *:nth-child(2) {
     grid-column: 1 / span 2;
+}
+
+/* Docs */
+.docs-head img {
+    width: 200px;
+    justify-self: flex-end;
+}
+
+.docs-main h3 {
+    margin: 20px 0;
+}
+
+.docs-main .grid {
+    grid-template-columns: 1fr 2fr;
+    align-items: flex-start;
+}
+
+.docs-main nav li {
+    font-size: 17px;
+    padding-bottom: 5px;
+    margin-bottom: 5px;
+    border-bottom: 1px #ccc solid;
+}
+
+.docs-main a:hover {
+    font-weight: bold;
 }
 
 /* Footer */
