--- a/css/style.css
+++ b/css/style.css
@@ -106,14 +106,19 @@ pre {
     overflow: visible;
 }
 
+.showcase-text {
+    animation: slideInFromLeft 1s ease-in;
+}
+
 .showcase-form {
     position: relative;
     top: 60px;
     height: 350px;
-    width: 400px;
+    width: 370px;
     padding: 40px;
     z-index: 100;
     justify-self: flex-end;
+    animation: slideInFromRight 1s ease-in;
 }
 
 .showcase-form .form-control {
@@ -155,6 +160,7 @@ pre {
 /* Stats */
 .stats {
     padding-top: 100px;
+    animation: slideInFromBottom 1s ease-in;
 }
 
 .stats-heading {
@@ -291,6 +297,7 @@ pre {
     .showcase-text {
         text-align: center;
         margin-top: 40px;
+        animation: slideInFromTop 1s ease-in;
     }
 
     .showcase-form {
@@ -298,6 +305,7 @@ pre {
         justify-self: center;
         /* Centraliza normal */
         margin: auto;
+        animation: slideInFromBottom 1s ease-in;
     }
 
     /* Pega apenas o primeiro filho */
@@ -330,6 +338,47 @@ pre {
     .features-main .grid > *:first-child,
     .features-main .grid > *:nth-child(2) {
         grid-column: 1;
+    }
+}
+
+/* Animations */
+@keyframes slideInFromLeft {
+    0% {
+        transform: translateX(-100%);
+    }
+
+    100% {
+        transform: translateX(0);
+    }
+}
+
+@keyframes slideInFromRight {
+    0% {
+        transform: translateX(100%);
+    }
+
+    100% {
+        transform: translateX(0);
+    }
+}
+
+@keyframes slideInFromTop {
+    0% {
+        transform: translateY(-100%);
+    }
+
+    100% {
+        transform: translateY(0);
+    }
+}
+
+@keyframes slideInFromBottom {
+    0% {
+        transform: translateY(100%);
+    }
+
+    100% {
+        transform: translateY(0);
     }
 }
 
